--- a/src/Item.module.css
+++ b/src/Item.module.css
@@ -1,16 +1,34 @@
 .item {
   border-radius: 4px;
   background-color: #e2e6ea;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.count {
+  background-color: #ef6262;
+  font-weight: 700;
+  border-radius: 4px 0 0 4px;
+  display: inline-block;
+  padding: 4px 24px;
 }
 
 .volume {
+  font-weight: 700;
+  flex-grow: 1;
 }
 
 .name {
+  flex-grow: 2;
 }
 
 .price {
   color: #051c38;
   background-color: #b3d6ff;
   border-radius: 0 4px 4px 0;
+  font-weight: 700;
+  display: inline-block;
+  padding: 4px 24px;
 }
